--- a/Androidable.sketchplugin/Contents/Sketch/manifest.json
+++ b/Androidable.sketchplugin/Contents/Sketch/manifest.json
@@ -17,12 +17,17 @@
         {
             "name": "Export Vector Drawable",
             "identifier": "export_vector_drawable",
-            "script": "export/export_assets.cocoascript"
+            "script": "export/export_vector_drawable.cocoascript"
         },
         {
             "name": "Export 9-Patch",
             "identifier": "export_nine_patch",
             "script": "export/export_nine_patch.cocoascript"
+        },
+        {
+            "name": "Export App Icon",
+            "identifier": "export_app_icon",
+            "script": "export/export_app_icon.cocoascript"
         }
 
     ],
@@ -30,7 +35,9 @@
         "isRoot": false,
         "items": [
             "export_assets",
-            "export_nine_patch"
+            "export_nine_patch",
+            "export_vector_drawable",
+            "export_app_icon"
         ]
     }
 }
