--- a/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
+++ b/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
@@ -76,7 +76,7 @@
             "script": "utilities/utilities.cocoascript"
         },
         {
-            "name": "Change Language",
+            "name": "Change Menu Language",
             "identifier": "change_language",
             "script": "utilities/change_language.cocoascript"
         },
