--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -24,11 +24,23 @@ change_language: Change Menu Language
 no_selection: Please select at least one layer.
 input_asset_name: Input asset name for "%1".
 
-app_icon: App Icon
-
-# change language
 change_menu_language: Change Menu Language
 language_file_not_found: Language file not found.
 language_file_not_found_desc: Language file "%1" does not existed.
 ok: OK
 cancel: Cancel
+
+asset_name_for_nine_path: Asset name for new nine-path.
+asset_name_for_vector_drawable: Asset name for new vector drawable.
+vector_drawable_no_support_text: Text layer can't covert to vector drawable, you can convert to outlines first.
+vector_drawable_no_support_artboard: Artboard can't covert to vector drawable, you can ungroup it.
+vector_drawable_no_support_bitmap: Bitmap layer can't covert to vector drawable.
+vector_drawable_no_support_symbol: Symbol can't covert to vector drawable.
+vector_drawable_no_support_rotation: Rotation is not supported by vector drawable, please flatten first.
+vector_drawable_no_support_flipped: Flipped is not supported by vector drawable, please flatten first.
+vector_drawable_no_support_mask: Mask is not supported by vector drawable.
+vector_drawable_no_support_fill: Only solid fill is supported by vector drawable.
+vector_drawable_no_support_border: Only solid border is supported by vector drawable.
+vector_drawable_no_support_shadow: Shape layer with shadow is not supported by vector drawable.
+vector_drawable_no_support_inner_shadow: Shape layer with inner shadow is not supported by vector drawable.
+vector_drawable_no_support_blur: Shape layer with blur is not supported by vector drawable.
