(WIP) Export png assets.

--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -4,6 +4,8 @@
     "author": "Ashung Hung",
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
+    "manifestURL": "https://github.com/Ashung/Android_Res_Export/raw/master/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json",
+    "downloadURL": "https://github.com/Ashung/Android_Res_Export/archive/master.zip",
     "version": "2.0.0",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
@@ -81,22 +83,27 @@
             "script": "utilities/change_language.cocoascript"
         },
         {
+            "name": "检测更新",
+            "identifier": "update",
+            "script": "utilities/update.cocoascript"
+        },
+        {
             "name": "通过 PayPal 打赏",
             "identifier": "donate_via_paypal",
             "handler": "donateViaPaypal",
-            "script": "Utilities/utilities.cocoascript"
+            "script": "utilities/utilities.cocoascript"
         },
         {
             "name": "通过微信打赏",
             "identifier": "donate_via_wechat",
             "handler": "donateViaWechat",
-            "script": "Utilities/utilities.cocoascript"
+            "script": "utilities/utilities.cocoascript"
         },
         {
             "name": "通过支付宝打赏",
             "identifier": "donate_via_alipay",
             "handler": "donateViaAlipay",
-            "script": "Utilities/utilities.cocoascript"
+            "script": "utilities/utilities.cocoascript"
         }
     ],
     "menu": {
@@ -113,14 +120,13 @@
             "export_vector_drawable",
             "export_app_icon",
             "-",
-            "show_assets_in_finder",
-            "open_terminal_at_assets_folder",
-            "-",
             {
                 "title": "帮助",
                 "items": [
                     "web_site",
                     "report_issues",
+                    "-",
+                    "update",
                     "-",
                     "change_language",
                     "-",
