--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -8,8 +8,7 @@ export_assets: Export PNG Assets
 export_vector_drawable: Export Vector Drawables
 export_nine_patch: Export 9-Patch Assets
 export_app_icon: Export App Icon
-show_assets_in_finder: Show Asset in Finder
-open_terminal_at_assets_folder: Open Terminal at Asset Folder
+asset_name_validator: Asset Name Validator
 help: Help
 web_site: Web Site
 report_issues: Report Issues
@@ -54,3 +53,15 @@ vector_drawable_no_support_inner_shadow: Shape layer with inner shadow is not su
 vector_drawable_no_support_blur: Shape layer with blur is not supported by vector drawable.
 
 no_png_asset: No any PNG asset.
+report_layer_rename: 'Invaild layer name: %1 -> %2'
+report_layer_name_duplicate: 'Duplicate layer name: %1'
+no_duplicate_and_invaild_asset_name: No duplicate and invaild asset name.
+
+select_app_icon_artboard: Please selected the app icon artboard or symbol master.
+app_icon_artboard_tips: Your icon must in an artboard or symbol master, and the size must be 192x192px.
+
+install_imagemagick_title: You have not install ImageMagick.
+install_imagemagick_message: |-
+    Export Android nine-patch image feature depend on the ImageMagick library.
+    Install use HomeBrew:
+    $ brew install ImageMagick
